# MPSServer

./: .gitignore  README.md  architecture.md  build.gradle  gradle.properties  modelix.gradle  package.gradle  publication.gradle  tests.gradle  versions.gradle
functional_tests/: Readme.md  build.gradle  execute_functional_tests.sh  pyproject.toml  requirements.txt
functional_tests/modelserver_dumps/: testdump1  testdump2
functional_tests/mps_example_project/.mps/: .name  modules.xml  workspace.xml
functional_tests/mps_example_project/languages/MySimpleLanguage/: MySimpleLanguage.mpl
functional_tests/mps_example_project/languages/MySimpleLanguage/models/: MySimpleLanguage.behavior.mps  MySimpleLanguage.constraints.mps  MySimpleLanguage.editor.mps  MySimpleLanguage.structure.mps  MySimpleLanguage.typesystem.mps
functional_tests/mps_example_project/solutions/MyMPSServerExtension/: MyMPSServerExtension.msd
functional_tests/mps_example_project_withextension/: build-core.xml  build-meta.xml
functional_tests/mps_example_project_withextension/.mps/: .name  libraries.xml  modules.xml  workspace.xml
functional_tests/mps_example_project_withextension/languages/ProtocolLanguage/: ProtocolLanguage.mpl
functional_tests/mps_example_project_withextension/solutions/ProtocolLanguage.build/: ProtocolLanguage.build.msd
functional_tests/mps_example_project_withextension/solutions/ProtocolLanguage.build.meta/: ProtocolLanguage.build.meta.msd
functional_tests/mpsserverfunctests/: BaseTest.py  BasicTests.py  ExtensionsTests.py  IntentionsTests.py  ModelixTests.py
(+150 files in other folders)
