[tool.poetry]
name = "mpsserver-functional-tests"
version = "1.0.0"
description = "Functional tests for MPSServer"
authors = ["Federico Tomassetti <federico@strumenta.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
aiounittest = "^1.4.0"
async-timeout = "^3.0.1"
certifi = "^2020.6.20"
chardet = "^3.0.4"
idna = "^2.10"
requests = "^2.24.0"
urllib3 = "^1.25.10"
websockets = "^9.1"
wrapt = "^1.12.1"
black = "^19.10b0"
flake8 = "^3.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
